added db connection configuration to .env file

--- a/.env.dist
+++ b/.env.dist
@@ -1,1 +1,7 @@
-HOST_UID=1000
+HOST_UID=1001
+DB_ENGINE=django.db.backends.postgresql_psycopg2
+DB_HOST=db
+DB_DATABASE=django_basic
+DB_USERNAME=docker
+DB_PASSWORD=secret
+DB_PORT=5432
