--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       volumes:
           - ./docker/volumes/db:/var/lib/postgresql/data
       environment:
-          POSTGRES_PASSWORD: secret
-          POSTGRES_USER: docker
-          POSTGRES_DB: django_project
+          POSTGRES_PASSWORD: ${DB_PASSWORD}
+          POSTGRES_USER: ${DB_USERNAME}
+          POSTGRES_DB: ${DB_DATABASE}
           PGDATA: /var/lib/postgresql/data/pgdata
       restart: always
 
@@ -29,6 +29,8 @@ services:
       extends:
           service: manage
       command: runserver 0.0.0.0:8000
+      env_file:
+          - ./.env
       ports:
           - "8000:8000"
       depends_on:
